deployment/search-api/search-api.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-api
  namespace: athenarc
  labels:
    app: search-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: search-api
  template:
    metadata:
      labels:
        app: search-api
    spec:
      hostAliases:
        - ip: "10.98.63.240"
          hostnames:
            - datagems-dev.scayle.es
      imagePullSecrets:
        - name: search-api-ghcr-auth
      containers:
        - name: search-api
          image: ghcr.io/datagems-eosc/cross-dataset-discovery:v1.0.1
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 60
            periodSeconds: 20
          resources:
            requests:
              memory: "6Gi" 
              cpu: "500m"      
            limits:
              memory: "8Gi"  
              cpu: "1000m" 
      #volumes:
      #  - name: logs-volume
      #    persistentVolumeClaim:
      #      claimName: search-api-logs-pvc
