deployment/search-api/search-api.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: search-api-service
  namespace: athenarc
spec:
  type: ClusterIP
  selector:
    app: search-api
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
